--- a/doc/internal/man3/ossl_cmp_print_log.pod
+++ b/doc/internal/man3/ossl_cmp_print_log.pod
@@ -14,7 +14,6 @@ ossl_cmp_log2,
 ossl_cmp_log3,
 ossl_cmp_log4,
 ossl_cmp_log_parse_metadata,
-ossl_cmp_add_error_txt,
 ossl_cmp_add_error_data,
 ossl_cmp_add_error_line
 - logging and error reporting support for CMP
@@ -40,7 +39,6 @@ ossl_cmp_add_error_line
                                          OSSL_CMP_severity *level, char **func,
                                          char **file, int *line);
 
- void ossl_cmp_add_error_txt(const char *separator, const char *txt);
  #define ossl_cmp_add_error_data(txt)
  #define ossl_cmp_add_error_line(txt)
 
@@ -72,17 +70,11 @@ the variable pointed to by I<file> with the filename string or NULL, and
 the variable pointed to by I<line> with the line number or -1.
 Any string returned via I<*func> and I<*file> must be freeed by the caller.
 
-ossl_cmp_add_error_txt() appends text to the extra data field of the last
-error message in the OpenSSL error queue, after adding the optional separator
-unless data has been empty so far. The text can be of arbitrary length,
-which is not possible when using L<ERR_add_error_data(3)> in conjunction with
-L<ERR_print_errors_cb(3)>.
-
 ossl_cmp_add_error_data() is a macro calling
-ossl_cmp_add_error_txt() with the separator being ":".
+L<ERR_add_error_txt(3)> with the separator being ":".
 
 ossl_cmp_add_error_line() is a macro calling
-ossl_cmp_add_error_txt() with the separator being "\n".
+L<ERR_add_error_txt(3)> with the separator being "\n".
 
 =head1 RETURN VALUES
 
@@ -90,12 +82,15 @@ ossl_cmp_log_parse_metadata() returns the pointer to the actual message text
 after the OSSL_CMP_LOG_PREFIX and level and ':' if found in the buffer,
 else the beginning of the buffer.
 
-ossl_cmp_add_error_txt()
-ossl_cmp_add_error_data(), and
+ossl_cmp_add_error_data() and
 ossl_cmp_add_error_line()
 do not return anything.
 
 All other functions return 1 on success, 0 on error.
+
+=head1 SEE ALSO
+
+L<ERR_add_error_txt(3)>
 
 =head1 HISTORY
 
